XP Synthesiser Release 1.0